Update post metadata

--- a/.forestry/front_matter/templates/blog-post.yml
+++ b/.forestry/front_matter/templates/blog-post.yml
@@ -24,10 +24,10 @@ fields:
   name: authors
   label: authors
 pages:
-- content/post/2014/03/migrate-from-jekyll.en.md
-- content/post/2014/04/go-is-for-lovers.en.md
-- content/post/2014/04/hugo-is-for-lovers.en.md
-- content/post/2014/09/creating-a-new-theme.en.md
+- content/post/2014/03/migrate-from-jekyll.md
+- content/post/2014/04/go-is-for-lovers.md
+- content/post/2014/04/hugo-is-for-lovers.md
+- content/post/2014/09/creating-a-new-theme.md
 - content/post/2018/01/playing-in-ruby-mine.md
 - content/post/2019/10/clearing-cache-using-git-hook.md
 - content/post/2019/10/deploying-now-with-cloudflare.md
