--- a/config.yaml
+++ b/config.yaml
@@ -34,6 +34,10 @@ caches:
   modules:
     dir: ":cacheDir/modules"
     maxAge: -1
+params:
+  imgEdgeCacheTiny: https://img.weeknd.dev/w=150_q=70_output=webp/
+  imgEdgeCacheSmall: https://img.weeknd.dev/w=450_q=70_output=webp/
+  imgEdgeCacheLarge: https://img.weeknd.dev/w=720_q=80_output=webp/
 taxonomies:
   author: authors
   tag: tags
